<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tei.kav.smartorder.MakeOrderActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            style="@style/myTextView"
            android:labelFor="@+id/textTable"
            android:text="@string/table" />

        <EditText
            android:id="@+id/textTable"
            style="@style/myEditText"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/myTextView"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/myTextView"
            android:text="@string/product" />

        <Spinner
            android:id="@+id/spinnerProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/myTextView"
            android:text="@string/item" />

        <Spinner
            android:id="@+id/spinnerItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/myTextView"
            android:text="@string/characteristics" />

        <Button
            style="@style/myButton"
            android:onClick="chooseCharacteristics"
            android:text="@string/choose" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/myTextView"
            android:text="@string/count" />

        <Spinner
            android:id="@+id/spinnerCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/countValues" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            style="@style/myButton"
            android:layout_weight="1"
            android:onClick="Cancel"
            android:text="@string/cancel" />

        <Button
            style="@style/myButton"
            android:layout_weight="1"
            android:onClick="Insert"
            android:text="@string/insert" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        layout="@layout/order_list" />

    <Button
        style="@style/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SentOrder"
        android:text="@string/sentOrder" />

</LinearLayout>