<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tei.kav.smartorder.OrdersActivity" >

    <ListView
        android:id="@+id/listTables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="NewOrder"
            android:text="@string/newOrder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/moneyOnHandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneyOnHand"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/moneyToGetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneyToGet"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>